salesforce-main/src/main/default/objects/Account/fields/AA_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>AA_Passport_Number__c</fullName>
    <description>Sourced from Active Apply for SIStoCRM Integration.

Added for International Specific Applications.</description>
    <label>Passport Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>