salesforce-main/src/main/default/objects/Account/fields/Academic_Cert_Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>Academic_Cert_Expected_Date__c</fullName>
    <label>Academic Cert Expected Date</label>
    <type>Date</type>
</CustomField>