salesforce-main/src/main/default/objects/Account/fields/ACCA_Reg_Card_Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>ACCA_Reg_Card_Expected_Date__c</fullName>
    <label>ACCA Reg Card Expected Date</label>
    <type>Date</type>
</CustomField>