salesforce-main/src/main/default/objects/Account/fields/Account_Bypass_Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>Account_Bypass_Duplicate_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to be toggled during a save event. Evaluated by duplicate rules, if true then do not run/alert</description>
    <label>Account Bypass Duplicate Check</label>
    <type>Checkbox</type>
</CustomField>