salesforce-main/src/main/default/objects/Account/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <description>[BD] Predates Apollo Salesforce team.  5/11/11</description>
    <label>Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer - FTSE 350 or Equal</fullName>
            </value>
            <value>
                <fullName>Customer - Middle Market</fullName>
            </value>
            <value>
                <fullName>Customer - Small</fullName>
            </value>
            <value>
                <fullName>Customer - Individual</fullName>
            </value>
            <value>
                <fullName>Prospect - FTSE 350 or Equal</fullName>
            </value>
            <value>
                <fullName>Prospect - Middle Market</fullName>
            </value>
            <value>
                <fullName>Prospect - Small</fullName>
            </value>
            <value>
                <fullName>Prospect - Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>