salesforce-main/src/main/default/objects/Account/fields/Account_Id_18_Characters__c.field-meta.xml
<CustomField>
    <fullName>Account_Id_18_Characters__c</fullName>
    <description>Legacy Migration</description>
    <label>Account Id 18 Characters</label>
    <length>18</length>
    <type>Text</type>
</CustomField>