salesforce-main/src/main/default/objects/Account/fields/Account_Managed__c.field-meta.xml
<CustomField>
    <fullName>Account_Managed__c</fullName>
    <label>Client Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum Plus</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Key Client</fullName>
                <isActive>false</isActive>
                <label>Key Client</label>
            </value>
            <value>
                <fullName>London</fullName>
                <isActive>false</isActive>
                <label>London</label>
            </value>
            <value>
                <fullName>SMC</fullName>
                <isActive>false</isActive>
                <label>SMC</label>
            </value>
            <value>
                <fullName>Tier 1</fullName>
                <isActive>false</isActive>
                <label>Tier 1</label>
            </value>
            <value>
                <fullName>Tier 2</fullName>
                <isActive>false</isActive>
                <label>Tier 2</label>
            </value>
            <value>
                <fullName>Tier 3</fullName>
                <isActive>false</isActive>
                <label>Tier 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>