salesforce-main/src/main/default/objects/Account/fields/Account_Owner_Full__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Full__c</fullName>
    <description>Created in order to add Account Owner Full Name on Account Search Layout</description>
    <formula>HYPERLINK( &quot;/&quot; &amp; Owner.Id , Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>