salesforce-main/src/main/default/objects/Account/fields/Account_Tax_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Tax_Category__c</fullName>
    <description>This field has been created to populate the tax category when creating an account</description>
    <label>Account Tax Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Tax_Categories</valueSetName>
    </valueSet>
</CustomField>