salesforce-main/src/main/default/objects/Account/fields/Acronym_short_title__c.field-meta.xml
<CustomField>
    <fullName>Acronym_short_title__c</fullName>
    <label>Acronym (short title)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>