salesforce-main/src/main/default/objects/Account/fields/Active_Account__c.field-meta.xml
<CustomField>
    <fullName>Active_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows if the company account is currently active or not</description>
    <label>Active Account</label>
    <type>Checkbox</type>
</CustomField>