salesforce-main/src/main/default/objects/Account/fields/Additional_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Phone_2__c</fullName>
    <label>Additional Phone 2</label>
    <type>Phone</type>
</CustomField>