salesforce-main/src/main/default/objects/Account/fields/Additional_Phone__c.field-meta.xml
<CustomField>
    <fullName>Additional_Phone__c</fullName>
    <label>Additional Phone</label>
    <type>Phone</type>
</CustomField>