salesforce-main/src/main/default/objects/Account/fields/Addressable_Levy_pot__c.field-meta.xml
<CustomField>
    <fullName>Addressable_Levy_pot__c</fullName>
    <label>Addressable Levy pot</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-100k</fullName>
            </value>
            <value>
                <fullName>100k - 250k</fullName>
            </value>
            <value>
                <fullName>250k - 500k</fullName>
            </value>
            <value>
                <fullName>500k - 1M</fullName>
            </value>
            <value>
                <fullName>1M+</fullName>
            </value>
            <value>
                <fullName>2M+</fullName>
            </value>
            <value>
                <fullName>5M+</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>1,000,000</fullName>
                <isActive>false</isActive>
                <label>1,000,000</label>
            </value>
            <value>
                <fullName>1,074,600</fullName>
                <isActive>false</isActive>
                <label>1,074,600</label>
            </value>
            <value>
                <fullName>10,400,000</fullName>
                <isActive>false</isActive>
                <label>10,400,000</label>
            </value>
            <value>
                <fullName>100</fullName>
                <isActive>false</isActive>
                <label>100</label>
            </value>
            <value>
                <fullName>100,000</fullName>
                <isActive>false</isActive>
                <label>100,000</label>
            </value>
            <value>
                <fullName>1000</fullName>
                <isActive>false</isActive>
                <label>1000</label>
            </value>
            <value>
                <fullName>10000</fullName>
                <isActive>false</isActive>
                <label>10000</label>
            </value>
            <value>
                <fullName>100000</fullName>
                <isActive>false</isActive>
                <label>100000</label>
            </value>
            <value>
                <fullName>1000000</fullName>
                <isActive>false</isActive>
                <label>1000000</label>
            </value>
            <value>
                <fullName>120000</fullName>
                <isActive>false</isActive>
                <label>120000</label>
            </value>
            <value>
                <fullName>125,000</fullName>
                <isActive>false</isActive>
                <label>125,000</label>
            </value>
            <value>
                <fullName>125000</fullName>
                <isActive>false</isActive>
                <label>125000</label>
            </value>
            <value>
                <fullName>125k</fullName>
                <isActive>false</isActive>
                <label>125k</label>
            </value>
            <value>
                <fullName>13000</fullName>
                <isActive>false</isActive>
                <label>13000</label>
            </value>
            <value>
                <fullName>135000</fullName>
                <isActive>false</isActive>
                <label>135000</label>
            </value>
            <value>
                <fullName>14000</fullName>
                <isActive>false</isActive>
                <label>14000</label>
            </value>
            <value>
                <fullName>140000</fullName>
                <isActive>false</isActive>
                <label>140000</label>
            </value>
            <value>
                <fullName>1400000</fullName>
                <isActive>false</isActive>
                <label>1400000</label>
            </value>
            <value>
                <fullName>15,000</fullName>
                <isActive>false</isActive>
                <label>15,000</label>
            </value>
            <value>
                <fullName>150</fullName>
                <isActive>false</isActive>
                <label>150</label>
            </value>
            <value>
                <fullName>150,000</fullName>
                <isActive>false</isActive>
                <label>150,000</label>
            </value>
            <value>
                <fullName>15000</fullName>
                <isActive>false</isActive>
                <label>15000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>