salesforce-main/src/main/default/objects/Account/fields/Agent_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Agent_Status_Notes__c</fullName>
    <label>Status Notes</label>
    <type>TextArea</type>
</CustomField>