salesforce-main/src/main/default/objects/Account/fields/Annual_Wage_Bill__c.field-meta.xml
<CustomField>
    <fullName>Annual_Wage_Bill__c</fullName>
    <description>Companies annual wage bill</description>
    <label>Annual Wage Bill</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>