salesforce-main/src/main/default/objects/Account/fields/Apprenticeship_Service_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Apprenticeship_Service_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Capture information about the Levy status of a Client Account</description>
    <label>Apprenticeship Service Account Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Apprenticeship Service Account Owner)</relationshipLabel>
    <relationshipName>Appr_Service_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>