salesforce-main/src/main/default/objects/Account/fields/AR_Account_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>AR_Account_Status_Code__c</fullName>
    <label>Account Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>