salesforce-main/src/main/default/objects/Account/fields/AR_Discount_Eligible__c.field-meta.xml
<CustomField>
    <fullName>AR_Discount_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount Eligible</label>
    <type>Checkbox</type>
</CustomField>