salesforce-main/src/main/default/objects/Account/fields/AR_Displayable_Message__c.field-meta.xml
<CustomField>
    <fullName>AR_Displayable_Message__c</fullName>
    <label>Displayable Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>