salesforce-main/src/main/default/objects/Account/fields/AR_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>AR_Reason_Code__c</fullName>
    <label>Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>