salesforce-main/src/main/default/objects/Account/fields/AR_Student_Finance_England_SFE__c.field-meta.xml
<CustomField>
    <fullName>AR_Student_Finance_England_SFE__c</fullName>
    <label>Student Finance England # (SFE)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>