salesforce-main/src/main/default/objects/Account/fields/Attendance_Record_Expected_Date__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Record_Expected_Date__c</fullName>
    <label>Attendance Record Expected Date</label>
    <type>Date</type>
</CustomField>