salesforce-main/src/main/default/objects/Account/fields/Auto_allocate_Payments__c.field-meta.xml
<CustomField>
    <fullName>Auto_allocate_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, Payments are auto-allocated to Invoices whenever the automated Bank Statement processing job runs. Invoices are first matched to Payments by outstanding balance, but if no match, the oldest Invoice is paid first until the Payment balance is utilised.</description>
    <inlineHelpText>If selected, Payments are auto-allocated to Invoices when the automated Bank Statement processing job runs. Invoices are first matched to Payments by outstanding balance. If no match, the oldest Invoice is paid first until the Payment balance is utilised.</inlineHelpText>
    <label>Auto-allocate Payments?</label>
    <type>Checkbox</type>
</CustomField>