salesforce-main/src/main/default/objects/Account/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <description>Company Bank Account Number</description>
    <inlineHelpText>Must be a sequence of numerical characters</inlineHelpText>
    <label>Bank Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>