salesforce-main/src/main/default/objects/Account/fields/Bank_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Sort_Code__c</fullName>
    <description>Company bank Sort Code</description>
    <inlineHelpText>Must be in the format 12-34-56</inlineHelpText>
    <label>Bank Sort Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>