salesforce-main/src/main/default/objects/Account/fields/Billing_Cycle_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle_Start_Month__c</fullName>
    <description>Used for alignment of the Order Start Dates.</description>
    <inlineHelpText>Mandatory for Billing Type In Arrears and Billing Frequency &gt; Monthly. Sets the cycle start month for alignment of charges on various orders.</inlineHelpText>
    <label>Billing Cycle Start Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>