salesforce-main/src/main/default/objects/Account/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <description>Billing Frequency defined on the Account level. For Accounts of type Customer Group Tier 1 - Key, this Billing Frequency will be interpreted and set correctly for invoicing.</description>
    <inlineHelpText>For Accounts of type Customer Group Tier 1 - Key, this Billing Frequency will be interpreted and set correctly for invoicing.</inlineHelpText>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingFrequency</valueSetName>
    </valueSet>
</CustomField>