salesforce-main/src/main/default/objects/Account/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <label>Billing Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Advance</fullName>
                <default>true</default>
                <label>In Advance</label>
            </value>
            <value>
                <fullName>In Arrears</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>