salesforce-main/src/main/default/objects/Account/fields/Bodies_With_Levy_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Bodies_With_Levy_Permissions__c</fullName>
    <description>Capture information about the Levy status of a Client Account</description>
    <label>Bodies with levy permissions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professional Education</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Actuarial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>