salesforce-main/src/main/default/objects/Account/fields/Booking_Notes__c.field-meta.xml
<CustomField>
    <fullName>Booking_Notes__c</fullName>
    <label>Booking Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>