salesforce-main/src/main/default/objects/Account/fields/Booking_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Booking_Requirements__c</fullName>
    <label>Booking Requirements</label>
    <length>30</length>
    <type>Text</type>
</CustomField>