salesforce-main/src/main/default/objects/Account/fields/BPP_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>BPP_Account_Number__c</fullName>
    <description>Salesforce unique identifier for both Student and Business Accounts</description>
    <displayFormat>{0000000}</displayFormat>
    <label>Account Number</label>
    <type>AutoNumber</type>
</CustomField>