salesforce-main/src/main/default/objects/Account/fields/BPP_Client_Microsite__c.field-meta.xml
<CustomField>
    <fullName>BPP_Client_Microsite__c</fullName>
    <description>Bespoke BPP &apos;microsite&apos; URL</description>
    <label>BPP Client Microsite</label>
    <type>Url</type>
</CustomField>