salesforce-main/src/main/default/objects/Account/fields/BPP_Deliver_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>BPP_Deliver_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default contact for deliveries for this account</description>
    <label>Deliver To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Deliver To Contact)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>