salesforce-main/src/main/default/objects/Account/fields/BPP_Exclusive_Client__c.field-meta.xml
<CustomField>
    <fullName>BPP_Exclusive_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclusive Client</label>
    <type>Checkbox</type>
</CustomField>