salesforce-main/src/main/default/objects/Account/fields/BPP_Legacy_CRM__c.field-meta.xml
<CustomField>
    <fullName>BPP_Legacy_CRM__c</fullName>
    <label>Legacy CRM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>X3</fullName>
            </value>
            <value>
                <fullName>Voyager</fullName>
            </value>
            <value>
                <fullName>Estio PICS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>