salesforce-main/src/main/default/objects/Account/fields/BPP_Legacy_CRM_Reference__c.field-meta.xml
<CustomField>
    <fullName>BPP_Legacy_CRM_Reference__c</fullName>
    <label>Legacy CRM Reference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>