salesforce-main/src/main/default/objects/Account/fields/BPP_Not_Actively_Managed__c.field-meta.xml
<CustomField>
    <fullName>BPP_Not_Actively_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for business accounts in gold standard reporting</description>
    <label>Not Actively Managed</label>
    <type>Checkbox</type>
</CustomField>