salesforce-main/src/main/default/objects/Account/fields/BPP_Reason_SELT_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>BPP_Reason_SELT_Not_Required__c</fullName>
    <description>This field reduces risk for UKVI audits. Also improves visibility of processes being followed and managed effectively.</description>
    <label>Reason SELT Not Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Higher Education Institute (HEI) has made assessment</fullName>
            </value>
            <value>
                <fullName>Migrant from majority English speaking country</fullName>
            </value>
            <value>
                <fullName>Migrant has met required English level in a previous successful visa application</fullName>
            </value>
            <value>
                <fullName>Migrant holds degree from majority English speaking country</fullName>
            </value>
            <value>
                <fullName>Migrant holds GSCE, A Levels or Scottish Higher qualification in English studied in the UK whilst under 18</fullName>
            </value>
            <value>
                <fullName>Migrant to apply as Gifted student</fullName>
            </value>
            <value>
                <fullName>Study abroad programme as part of USA HEI degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>