salesforce-main/src/main/default/objects/Account/fields/BPP_Scottish_Candidate_Number_SCN__c.field-meta.xml
<CustomField>
    <fullName>BPP_Scottish_Candidate_Number_SCN__c</fullName>
    <description>When a university student applying via UCAS who has a Scottish candidate number (SCN), then Scottish candidate number (SCN) to be captured in Salesforce. So that it can be collected for HESA purposes.</description>
    <label>Scottish Candidate Number (SCN)</label>
    <length>9</length>
    <type>Text</type>
</CustomField>