salesforce-main/src/main/default/objects/Account/fields/Brand_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Brand_Ownership__c</fullName>
    <description>BPP Brand that has ownership of the account</description>
    <label>Brand Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BPP_Brands</valueSetName>
    </valueSet>
</CustomField>