salesforce-main/src/main/default/objects/Account/fields/Can_inform_employer_is_care_leaver__c.field-meta.xml
<CustomField>
    <fullName>Can_inform_employer_is_care_leaver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Given as part of the apprentice application events - indicates whether an employer can be informed if applicant is a care leaver.</description>
    <label>Can inform employer is care leaver</label>
    <type>Checkbox</type>
</CustomField>