salesforce-main/src/main/default/objects/Account/fields/Can_inform_employer_is_care_leaver_QA__c.field-meta.xml
<CustomField>
    <fullName>Can_inform_employer_is_care_leaver_QA__c</fullName>
    <formula>&quot;I confirm that I am happy for BPP to inform my employer that I am a care leaver, or I have an EHC plan, in order for them to claim an additional payment:&quot; +
BR() + BR() +
IF(
  Can_inform_employer_is_care_leaver__c = true,
  &apos;Yes&apos;,
  &apos;No&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can inform employer is care leaver</label>
    <type>Text</type>
</CustomField>