salesforce-main/src/main/default/objects/Account/fields/Care_Experience_Level__c.field-meta.xml
<CustomField>
    <fullName>Care_Experience_Level__c</fullName>
    <label>Care Experience Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Aged between 16 and 18 years old</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>Aged between 19 and 24 years old</label>
            </value>
            <value>
                <fullName>Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>