salesforce-main/src/main/default/objects/Account/fields/Care_Experience_Level_QA__c.field-meta.xml
<CustomField>
    <fullName>Care_Experience_Level_QA__c</fullName>
    <formula>IF(
  ISBLANK(TEXT(Care_Experience_Level__c)),
  &apos;&apos;,
  &quot;Please select the option that best describes what your care experience status will be at the start of the course:&quot; + BR() + BR() + 
  CASE(
    TEXT(Is_Local_Authority_Care__c),
    &apos;Yes&apos;, &apos;I am aged between 16 and 18 years old (or 15 years of age and my 16th birthday is between the last Friday of June and 31 August).&apos;,
    &apos;No&apos;, &apos;I am aged between 19 and 24 years old and have either an Education, Health and Care (EHC) plan provided by my local authority and / or have been in the care of my local authority.&apos;,
    TEXT(Is_Local_Authority_Care__c)
  )  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Experience Level</label>
    <type>Text</type>
</CustomField>