salesforce-main/src/main/default/objects/Account/fields/Care_Experience_Status__c.field-meta.xml
<CustomField>
    <fullName>Care_Experience_Status__c</fullName>
    <description>This fields records whether the student is a care leaver</description>
    <inlineHelpText>This fields records whether the student is a care leaver</inlineHelpText>
    <label>Care Experience Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>06~ Care leaver</fullName>
            </value>
            <value>
                <fullName>07~ Care experienced</fullName>
            </value>
            <value>
                <fullName>08~ Self-declared care experience but not confirmed</fullName>
            </value>
            <value>
                <fullName>09~ No experience of care</fullName>
            </value>
            <value>
                <fullName>97~ Not known</fullName>
            </value>
            <value>
                <fullName>98~ Prefer not to say</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>